Fri Jun 26 21:48:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (pty_getpty): check dup failure.

Fri Jun 26 17:33:46 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_rubyopt):
	  test suite add '.' to RUBYLIB.  remove checks.

	* test/ruby/test_require.rb (TestRequire#test_tainted_loadpath):
	  the default tempdir directory /tmp is world writable, so
	  SecrurityError would be raised.  check removed.

Fri Jun 26 16:32:59 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (COMPILE_PRELUDE): need -I. before -rrbconfig.
	  [ruby-dev:38714]

Thu Jun 25 18:41:51 2009  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 1.4.2 r5269.
	* test/minitest/*.rb: ditto.

Thu Jun 25 17:58:39 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_binmode_m): should call rb_io_ascii8bit_binmode() to
	  set its encoding to ASCII-8BIT.  [ruby-core:24029]

Thu Jun 25 13:04:58 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: '&' in sed s command's replacement is '\&' in ruby.
	  [ruby-dev:38713]

Thu Jun 25 06:50:23 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_each_codepoint): uninitialized local variable enc.

Thu Jun 25 06:25:49 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (first_i): wrong condition for no argument #first.
	  [ruby-core:24017]

Wed Jun 24 20:19:11 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_s_now): new function.  Time.now don't take arguments.

Wed Jun 24 16:08:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/resource.rb: CONFIG["TEENY"] is not ruby's version but API's
	  one.  So need to use RUBY_VERSION instead.

Wed Jun 24 16:07:04 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/mkexports.rb: rbconfig.rb exists at ".".

Wed Jun 24 15:02:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_set_encode): show the erred file name instead of
	  the file that requires it.  [ruby-core:24006]
